Adding small shell script to make deploys easier.

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ markdown: rdiscount
 pygments: true
 permalink: /posts/:title
 auto: true
-exclude: ['readme.markdown', 'LICENSE', '.gitignore', '.git', '_jekyll_s3.yml']
+exclude: ['readme.markdown', 'LICENSE', '.gitignore', '.git', 's3.sh']
 rdiscount:
   extensions: [smart]
