--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: http://blog.ngerakines.me/
+baseURL: https://blog.ngerakines.me/
 languageCode: en-us
 title: blog.ngerakines.me
 
@@ -39,13 +39,13 @@ params:
   showtoc: false
   tocopen: false
 
-  # assets:
+  assets:
   #   # disableHLJS: true # to disable highlight.js
   #   # disableFingerprinting: true
-  #   favicon: "<link / abs url>"
-  #   favicon16x16: "<link / abs url>"
-  #   favicon32x32: "<link / abs url>"
-  #   apple_touch_icon: "<link / abs url>"
+    favicon: "https://blog.ngerakines.me/favicon.ico"
+    favicon16x16: "https://blog.ngerakines.me/favicon-16x16.png"
+    favicon32x32: "https://blog.ngerakines.me/favicon-32x32.png"
+    apple_touch_icon: "https://blog.ngerakines.me/apple-touch-icon.png"
   #   safari_pinned_tab: "<link / abs url>"
 
   label:
